Stage 1 : create header and set up css layout

--- a/Bookshop_v5/Views/Home/Index.cshtml
+++ b/Bookshop_v5/Views/Home/Index.cshtml
@@ -3,6 +3,27 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>
-View Home
-</h1>
+@section styles {
+    <link rel="stylesheet" type="text/css" href="~/css/homepage.css">
+}
+
+<section class="release">
+    Release
+</section>
+<section>
+    AS FEATURED ON
+</section>
+
+<section>
+    A Word From The Author
+</section>
+<section>
+    Complete Series
+</section>
+<section>
+    What Readers Are Saying
+</section>
+
+
+
+
