--- a/Bookshop_v5/Views/Shared/_Layout.cshtml
+++ b/Bookshop_v5/Views/Shared/_Layout.cshtml
@@ -20,7 +20,8 @@
                 <a href="/Home/Index">Home</a>
             <a href="/Home/Index">Books</a>
             <a href="/Home/Index">About us</a>
-            <a href="/Home/Index">Contact</a> 
+            <a href="/Home/Index">Contact</a>
+            <a href="/Genre/Index">Genre List</a>
         </div>     
             <div class=" header-item header-right d-flex justify-content-end align-items-center">
                 <a href="/Home/Index">Đăng nhập</a>   
