Fix layout header

--- a/Bookshop_v5/Views/Shared/_Layout.cshtml
+++ b/Bookshop_v5/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
             <a href="/Home/Index">Books</a>
             <a href="/Home/AboutUs">About us</a>
             <a href="/Home/Index">Contact</a>
+            <a href="/Genre/Index">Genre List</a>
             <a href="/Auth/Register">Init Admin User</a>
         </div>     
             <div class=" header-item header-right d-flex justify-content-end align-items-center">
