--- a/Bookshop_v5/Views/Home/Index.cshtml
+++ b/Bookshop_v5/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 @section styles {
-    <link rel="stylesheet" type="text/css" href="~/css/homepage.css">
+    <link rel="stylesheet" type="text/css" href="~/css/test.css">
 }
 
 <section class="release">
