View user profile and edit user profile

--- a/Bookshop_v5/Views/Shared/_Layout.cshtml
+++ b/Bookshop_v5/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
             else
             {
                 <a href="/Auth/Login">Cart</a>
-                <a href="/Auth/Register">@username</a>
+                <a href="/Auth/Profile">@username</a>
                 <a href="/Auth/Logout">Log out</a>
             }
            
