[Duc - Nguyen] View Books , Filter book / View cart

--- a/Bookshop_v5/Views/Shared/_Layout.cshtml
+++ b/Bookshop_v5/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
        </div>      
             <div class=" header-item header-center d-flex justify-content-center align-items-center">
                 <a href="/Home/Index">Home</a>
-            <a href="/Home/Index">Books</a>
+            <a href="/Book/Index">Books</a>
             <a href="/Home/AboutUs">About us</a>
             <a href="/Home/Index">Contact</a>
             <a href="/Genre/Index">Genre List</a>
@@ -35,7 +35,7 @@
             }
             else
             {
-                <a href="/Auth/Login">Cart</a>
+                <a href="/Cart/Index">Cart</a>
                 <a href="/Auth/Profile">@username</a>
                 <a href="/Auth/Logout">Log out</a>
             }
