--- a/Bookshop_v5/Views/Home/Index.cshtml
+++ b/Bookshop_v5/Views/Home/Index.cshtml
@@ -1,29 +1,151 @@
-﻿
-@{
-    ViewData["Title"] = "Index";
+﻿@{
+ViewData["Title"] = "Index";
 }
-
 @section styles {
-    <link rel="stylesheet" type="text/css" href="~/css/test.css">
+<link rel="stylesheet" type="text/css" href="~/css/test.css">
 }
-
-<section class="release">
-    Release
+<!--    =================================
+   Hero Area
+   ===================================== -->
+<section class="hero-area hero-slider-1">
+   <div class="sb-slick-slider" data-slick-setting='{
+      "autoplay": true,
+      "fade": true,
+      "autoplaySpeed": 3000,
+      "speed": 3000,
+      "slidesToShow": 1,
+      "dots":true
+      }'>
+      <div class="single-slide bg-shade-whisper  ">
+         <div class="container">
+            <div class="home-content text-center text-sm-left position-relative">
+               <div class="hero-partial-image image-right">
+                  <img src="image/bg-images/home-slider-2-ai.png" alt="">
+               </div>
+               <div class="row g-0">
+                  <div class="col-xl-6 col-md-6 col-sm-7">
+                     <div class="home-content-inner content-left-side text-start">
+                        <h1>
+                           H.G. Wells<br>
+                           De Vengeance
+                        </h1>
+                        <h2>Cover Up Front Of Books and Leave Summary</h2>
+                        <a href="shop-grid.html" class="btn btn-outlined--primary">
+                        $78.09 - Order Now!
+                        </a>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div class="single-slide bg-ghost-white">
+         <div class="container">
+            <div class="home-content text-center text-sm-left position-relative">
+               <div class="hero-partial-image image-left">
+                  <img src="image/bg-images/home-slider-1-ai.png" alt="">
+               </div>
+               <div class="row align-items-center justify-content-start justify-content-md-end">
+                  <div class="col-lg-6 col-xl-7 col-md-6 col-sm-7">
+                     <div class="home-content-inner content-right-side text-start">
+                        <h1>
+                           J.D. Kurtness <br>
+                           De Vengeance
+                        </h1>
+                        <h2>Cover Up Front Of Books and Leave Summary</h2>
+                        <a href="shop-grid.html" class="btn btn-outlined--primary">
+                        $78.09 - Learn More
+                        </a>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
 </section>
-<section>
-    AS FEATURED ON
+<!--=================================
+   Home Features Section
+   ===================================== -->
+<section class="section-margin">
+   <h2 class="sr-only">Promotion Section</h2>
+   <div class="container">
+      <div class="row space-db--30">
+         <div class="col-lg-6 col-md-6 mb--30">
+            <a href="" class="promo-image promo-overlay">
+            <img src="image/bg-images/promo-banner-with-text.jpg" alt="">
+            </a>
+         </div>
+         <div class="col-lg-6 col-md-6 mb--30">
+            <a href="" class="promo-image promo-overlay">
+            <img src="image/bg-images/promo-banner-with-text-2.jpg" alt="">
+            </a>
+         </div>
+      </div>
+   </div>
 </section>
-
-<section>
-    A Word From The Author
+<!--=================================
+   Home Slider Tab
+   ===================================== -->
+<section class="section-margin bg-image section-padding-top section-padding"
+   data-bg="image/bg-images/best-seller-bg.jpg">
+   <div class="container">
+      <div class="section-title section-title--bordered mb-0">
+         <h2>Best BEST SELLER BOOKS</h2>
+      </div>
+      <div class="best-seller-block">
+         <div class="row align-items-center">
+            <div class="col-lg-5 col-md-6">
+               <div class="author-image">
+                  <img src="image/others/best-seller-author.jpg" alt="">
+               </div>
+            </div>
+            <div class="col-lg-7 col-md-6">
+               <div class="sb-slick-slider product-slider product-list-slider multiple-row slider-border-multiple-row"
+                  data-slick-setting='{
+                  "autoplay": false,
+                  "autoplaySpeed": 8000,
+                  "slidesToShow":2,
+                  "rows":2,
+                  "dots":true
+                  }' data-slick-responsive='[
+                  {"breakpoint":1200, "settings": {"slidesToShow": 1} },
+                  {"breakpoint":992, "settings": {"slidesToShow": 1} },
+                  {"breakpoint":768, "settings": {"slidesToShow": 1} },
+                  {"breakpoint":575, "settings": {"slidesToShow": 1} },
+                  {"breakpoint":490, "settings": {"slidesToShow": 1} }
+                  ]'>
+                  @foreach (var book in ViewBag.TopSeller)
+                  {
+                  <div class="single-slide">
+                     <div class="product-card card-style-list">
+                        <div class="card-image">
+                           <img src="@book.Image" alt="">
+                        </div>
+                        <div class="product-card--body">
+                           <div class="product-header">
+                              <a href="#" class="author">
+                              @book.Author
+                              </a>
+                              <h3>
+                                 <a href="@Url.Action("Details", "Book", new { id = book.Id })">
+                                 @book.Name
+                                 </a>
+                              </h3>
+                           </div>
+                           <div class="price-block">
+                              <span class="price">£@book.Price</span>         
+                              <del class="price-old">£@book.OldPrice</del>
+                              <span class="price-discount">20%</span>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  }   
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+   </div>
 </section>
-<section>
-    Complete Series
-</section>
-<section>
-    What Readers Are Saying
-</section>
-
-
-
-
