feature login and logout

--- a/Bookshop_v5/Views/Auth/Login.cshtml
+++ b/Bookshop_v5/Views/Auth/Login.cshtml
@@ -2,34 +2,39 @@
 @{
 }
 
-<form class="w-40" asp-action="Login" method="post">
-    <h2 class="pb-10">Login</h2>
-    <div class="input-container">
-        <label asp-for="Username" class="w-40">Username</label>
-        <input type="text" class="input" asp-for="Username">
-    </div>
-    <div class="message-box pd-x-28 error">
-       <span asp-validation-for="Username"></span>
-    </div>
-
-    <div class="input-container">
-        <label asp-for="Password" class="w-40">Password</label>
-        <input type="password" class="input" asp-for="Password">
-    </div>
-    <div class="message-box pd-x-28 error">
-        <span asp-validation-for="Password"></span>
-    </div>
-
-
-    @if (TempData["msg"] != null)
-    {
-            <div class="alert mb-1">
-            @TempData["msg"]
+<div class ="container">
+<a href="/Auth/Register">Init Admin User</a>
+<div  class="col-sm-12 col-md-12 col-lg-6 col-xs-12">
+    <form asp-action="Login" method="post">
+        <div class="login-form">
+            <h4 class="login-title">Login</h4>           
+            <div class="row">
+                <div class="col-md-12 col-12 mb--15">
+                    <label for="email">Enter your email address here...</label>
+                    <input class="mb-0 form-control" type="text" class="input" asp-for="Username"
+                           placeholder="Enter you username here...">
+                </div>
+                <div class="message-box pd-x-28 error">
+                    <span asp-validation-for="Username"></span>
+                </div>
+                <div class="col-12 mb--20">
+                    <label for="password">Password</label>
+                    <input class="mb-0 form-control" type="password" asp-for="Password" placeholder="Enter your password">
+                </div>
+                <div class="message-box pd-x-28 error">
+                    <span asp-validation-for="Password"></span>
+                </div>
+                @if (TempData["msg"] != null)
+                {
+                    <div class="alert mb-1">
+                        @TempData["msg"]
+                    </div>
+                }
+                <div class="col-md-12">                   
+                    <button class="btn btn-outlined" type="submit">Login</button>
+                </div>
+            </div>
         </div>
-    }
-
-    <div class="input-container">
-        <button class="btn btn-default" type="submit">Login</button>
-        @*<a class="btn btn-sec" href="#">Add more</a>*@
-    </div>
-</form>
+    </form>
+</div>
+</div>
