--- a/Bookshop_v5/Views/Home/Index.cshtml
+++ b/Bookshop_v5/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
 ViewData["Title"] = "Index";
+string username = User.Identity.Name;
 }
 @section styles {
 <link rel="stylesheet" type="text/css" href="~/css/test.css">
