--- a/Bookshop_v5/Views/Shared/_Header.cshtml
+++ b/Bookshop_v5/Views/Shared/_Header.cshtml
@@ -1,4 +1,8 @@
-﻿<div class="site-header d-none d-lg-block">
+﻿@{
+    string username = User.Identity.Name;
+}
+
+<div class="site-header d-none d-lg-block">
     <div class="header-middle pt--10 pb--10">
         <div class="container">
             <div class="row align-items-center">
@@ -48,6 +52,15 @@
                             <li class="menu-item">
                                 <a href="contact.html">Contact</a>
                             </li>
+                            @if (string.IsNullOrEmpty(username))
+                             {               
+                             }
+                             else
+                             {
+                             <li class="menu-item">
+                                    <a href="/Auth/Logout"><i class="fas fa-sign-out-alt"></i>  </a>
+                            </li>
+                            }
                         </ul>
                     </div>
                 </div>
@@ -66,53 +79,60 @@
                 <div class="col-lg-4">
                     <div class="main-navigation flex-lg-right">
                         <div class="cart-widget">
-                            <div class="login-block">
-                                <a href="/Auth/Login" class="font-weight-bold">Login</a> <br>
-                                <span>or</span><a href="/Auth/Register">Register</a>
-                            </div>
-                            <div class="cart-block">
-                                <div class="cart-total">
-                                    <span class="text-number">
-                                        1
-                                    </span>
-                                    <span class="text-item">
-                                        Shopping Cart
-                                    </span>
-                                    <span class="price">
-                                        £0.00
-                                        <i class="fas fa-chevron-down"></i>
-                                    </span>
+                            @if (string.IsNullOrEmpty(username))
+                            {
+                                <div class="login-block">
+                                    <a href="/Auth/Login" class="font-weight-bold">Login</a> <br>
+                                    <span>or</span><a href="/Auth/Register">Register</a>
                                 </div>
-                                <div class="cart-dropdown-block">
-                                    <div class=" single-cart-block ">
-                                        <div class="cart-product">
-                                            <a href="product-details.html" class="image">
-                                                <img src="image/products/cart-product-1.jpg" alt="">
-                                            </a>
-                                            <div class="content">
-                                                <h3 class="title">
-                                                    <a href="product-details.html">
-                                                        Kodak PIXPRO
-                                                        Astro Zoom AZ421 16 MP
-                                                    </a>
-                                                </h3>
-                                                <p class="price"><span class="qty">1 ×</span> £87.34</p>
-                                                <button class="cross-btn"><i class="fas fa-times"></i></button>
+                            }
+                            else
+                            {
+                                <div class="cart-block">
+                                    <div class="cart-total">
+                                        <span class="text-number">
+                                            1
+                                        </span>
+                                        <span class="text-item">
+                                            Shopping Cart
+                                        </span>
+                                        <span class="price">
+                                            £0.00
+                                            <i class="fas fa-chevron-down"></i>
+                                        </span>
+                                    </div>
+                                    <div class="cart-dropdown-block">
+                                        <div class=" single-cart-block ">
+                                            <div class="cart-product">
+                                                <a href="product-details.html" class="image">
+                                                    <img src="image/products/cart-product-1.jpg" alt="">
+                                                </a>
+                                                <div class="content">
+                                                    <h3 class="title">
+                                                        <a href="product-details.html">
+                                                            Kodak PIXPRO
+                                                            Astro Zoom AZ421 16 MP
+                                                        </a>
+                                                    </h3>
+                                                    <p class="price"><span class="qty">1 ×</span> £87.34</p>
+                                                    <button class="cross-btn"><i class="fas fa-times"></i></button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class=" single-cart-block ">
+                                            <div class="btn-block">
+                                                <a href="cart.html" class="btn">
+                                                    View Cart <i class="fas fa-chevron-right"></i>
+                                                </a>
+                                                <a href="checkout.html" class="btn btn--primary">
+                                                    Check Out <i class="fas fa-chevron-right"></i>
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class=" single-cart-block ">
-                                        <div class="btn-block">
-                                            <a href="cart.html" class="btn">
-                                                View Cart <i class="fas fa-chevron-right"></i>
-                                            </a>
-                                            <a href="checkout.html" class="btn btn--primary">
-                                                Check Out <i class="fas fa-chevron-right"></i>
-                                            </a>
-                                        </div>
-                                    </div>
                                 </div>
-                            </div>
+                            }                         
+                            
                         </div>
                     </div>
                 </div>
