--- a/Bookshop_v5/Views/Shared/_Layout.cshtml
+++ b/Bookshop_v5/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
 </head>
 <body>
     <partial name="_Header" />
-    <div class="site-wrapper" id="top">
+    <div class="site-wrapper container" id="top">
         @RenderBody()
      </div>
     <partial name="_Footer" />
