UI in shop screen

--- a/Bookshop_v5/Views/Shared/_Footer.cshtml
+++ b/Bookshop_v5/Views/Shared/_Footer.cshtml
@@ -1,4 +1,4 @@
-﻿<footer class="site-footer">
+﻿<footer style="margin-top: 100px" class="site-footer">
 	<div class="container">
 		<div class="row justify-content-between  section-padding">
 			<div class=" col-xl-3 col-lg-4 col-sm-6">
