--- a/Bookshop_v5/Views/Auth/Profile.cshtml
+++ b/Bookshop_v5/Views/Auth/Profile.cshtml
@@ -9,3 +9,4 @@
 <p><strong>Birthday:</strong> @Model.Birthday.ToShortDateString()</p>
 
 <a href="/Auth/EditProfile">Edit</a>
+<a href="/Order/Index">Order history</a>
