--- a/Bookshop_v5/Views/Admin/Book.cshtml
+++ b/Bookshop_v5/Views/Admin/Book.cshtml
@@ -6,18 +6,23 @@
 
 @model PaginationViewModel<Book>
 
+<div class="container">
+<div class="row">
+    <div class="col-md-11"></div
+    <div class="col-md-1"><a href="/Admin/CreateBook">Thêm mới</a></div>
+</div>
 <div class="row">
     <div class="col-md-3">
         <h4>Genres</h4>
         <ul class="list-group">
             <li class="list-group-item @if(Model.RouteValues["genre"] == 0){
             <text>active</text>
-}"><a href="/Book/Index?genreId=0">All Genres</a></li>
+}"><a href="/Admin/Book?genreId=0">All Genres</a></li>
             @foreach (var genre in Model.Genres)
             {
                 <li class="list-group-item @if(Model.RouteValues["genre"] == genre.Id){
             <text>active</text>
-}"><a href="/Book/Index?genreId=@genre.Id">@genre.Name</a></li>
+}"><a href="/Admin/Book?genreId=@genre.Id">@genre.Name</a></li>
             }
         </ul>
     </div>
@@ -29,6 +34,8 @@
                     <th>Title</th>
                     <th>Author</th>
                     <th>Genre</th>
+                    <th></th
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
@@ -38,32 +45,34 @@
                         <td><a href="@Url.Action("Details", "Book", new { id = book.Id })">@book.Name</a></td>
                         <td>@book.Author.Name</td>
                         <td>@book.Genre.Name</td>
+                        <td><a href="@Url.Action("EditBook","Admin", new { id = book.Id })" >Chỉnh sửa</a></td>
+                        <td><a href="@Url.Action("DeleteBook","Admin", new { id = book.Id })" >Xóa</a></td>
                     </tr>
                 }
             </tbody>
 
         </table>
-        <div class="pagination">
-            @if (Model.TotalPages > 1)
-            {
-                <ul>
-                    @if (Model.Page > 1)
-                    {
-                        <li><a href="/Book/Index?genreId=@Model.RouteValues["genre"]&amp;page=@(Model.Page - 1)&amp;pageSize=@Model.PageSize">Previous</a></li>
-                    }
-                    @for (int i = 1; i <= Model.TotalPages; i++)
-                    {
-                        <li class="@if(Model.Page == i){
-                <text>active</text>
-}"><a href="/Book/Index?genreId=@Model.RouteValues["genre"]&amp;page=@i&amp;pageSize=@Model.PageSize">@i</a></li>
-                    }
-                    @if (Model.Page < Model.TotalPages)
-                    {
-                        <li><a href="/Book/Index?genreId=@Model.RouteValues["genre"]&amp;page=@(Model.Page + 1)&amp;pageSize=@Model.PageSize">Next</a></li>
-                    }
-                </ul>
-            }
-        </div>
+        <ul class="pagination">
+    @if (Model.Page > 1)
+    {
+    <li class="page-item">
+                    <a class="page-link" href="/Admin/Book?genreId=@Model.RouteValues["genre"]&amp;page=@(Model.Page - 1)&amp;pageSize=@Model.PageSize">Previous</a>
+    </li>
+    }
+    @for (int i = 1; i <= Model.TotalPages; i++)
+    {
+    <li class="page-item @(Model.Page == i ? "active" : "")">
+                    <a class="page-link" href="/Admin/Book?genreId=@Model.RouteValues["genre"]&amp;page=@i&amp;pageSize=@Model.PageSize">@i</a>
+    </li>
+    }
+    @if (Model.Page < Model.TotalPages)
+    {
+    <li class="page-item">
+                    <a class="page-link" href="/Admin/Book?genreId=@Model.RouteValues["genre"]&amp;page=@(Model.Page + 1)&amp;pageSize=@Model.PageSize">Next</a>
+    </li>
+    }
+</ul>
+        
     </div>
 </div>
-
+</div>
