--- a/Bookshop_v5/Views/Auth/Profile.cshtml
+++ b/Bookshop_v5/Views/Auth/Profile.cshtml
@@ -1,12 +1,29 @@
 ﻿@model Bookshop_v5.Models.DTO.ProfileModel
 
-
-<h1>@Model.Name's Profile</h1>
-
-<p><strong>Email:</strong> @Model.Email</p>
-<p><strong>Gender:</strong> @Model.Gender</p>
-<p><strong>Address:</strong> @Model.Address</p>
-<p><strong>Birthday:</strong> @Model.Birthday.ToShortDateString()</p>
-
-<a href="/Auth/EditProfile">Edit</a>
-<a href="/Order/Index">Order history</a>
+<div class="container">
+    <h1>@Model.Name's Profile</h1>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="form-group">
+                <label>Email:</label>
+                <p>@Model.Email</p>
+            </div>
+            <div class="form-group">
+                <label>Gender:</label>
+                <p>@Model.Gender</p>
+            </div>
+            <div class="form-group">
+                <label>Address:</label>
+                <p>@Model.Address</p>
+            </div>
+            <div class="form-group">
+                <label>Birthday:</label>
+                <p>@Model.Birthday.ToShortDateString()</p>
+            </div>
+            <a href="/Auth/EditProfile" class="btn btn-primary">Edit</a>
+        </div>
+        <div class="col-md-6">
+            <a href="/Order/Index" class="btn btn-primary">Order history</a>
+        </div>
+    </div>
+</div>
