--- a/Bookshop_v5/Views/Book/Details.cshtml
+++ b/Bookshop_v5/Views/Book/Details.cshtml
@@ -1,12 +1,63 @@
 ﻿@model Bookshop_v5.Models.Domain.Book
 
-<h1>@Model.Name</h1>
-
-<p>Author: @Model.Author.Name</p>
-
-<p>Genre: @Model.Genre.Name</p
-
-<p>Price: @Model.Price</p>
 
 
-<p>Description: @Model.Description</p>
+
+<div class="modal-content">              
+                <div class="product-details-modal">
+                    <div class="row">
+                        <div class="col-lg-5">        
+                             <img src="@Model.Image" alt="">
+                        </div>
+                        <div class="col-lg-7 ">
+                            <div class="product-details-info pl-lg--30 ">                              
+                                <h3 class="product-title">@Model.Name</h3>
+                                <ul class="list-unstyled">
+                                    <li>Author: <span class="list-value">@Model.Author.Name </span></li>
+                                    <li>Genre: <a href="#" class="list-value font-weight-bold">@Model.Genre.Name</a></li>
+                                    <li>Product Code: <span class="list-value">@Model.Id</span></li>                                   
+                                    <li>Availability: <span class="list-value"> In Stock</span></li>
+                                </ul>
+                                <div class="price-block">
+                                    <span class="price-new">@Model.Price</span>
+                                    <del class="price-old">@Model.OldPrice</del>
+                                </div>
+                                <div class="rating-widget">
+                                    <div class="rating-block">
+                                        <span class="fas fa-star star_on"></span>
+                                        <span class="fas fa-star star_on"></span>
+                                        <span class="fas fa-star star_on"></span>
+                                        <span class="fas fa-star star_on"></span>
+                                        <span class="fas fa-star "></span>
+                                    </div>
+                                    <div class="review-widget">
+                                        <a href="">(1 Reviews)</a> <span>|</span>
+                                        <a href="">Write a review</a>
+                                    </div>
+                                </div>
+                                <article class="product-details-article">
+                                    <h4 class="sr-only">Product Summery</h4>
+                                    <p>Long printed dress with thin adjustable straps. V-neckline and wiring under
+                                        the Dust with ruffles
+                                        at the bottom
+                                        of the
+                                        dress.</p>
+                                </article>
+                                <div class="add-to-cart-row">
+                        <form asp-action="AddToCart" method="post">
+                            <div class="count-input-block">
+                                <span class="widget-label">Qty</span>
+                                <input type="number" class="form-control text-center" name="quantity" value="1">
+                                <input type="hidden" name="bookId" value="@Model.Id">
+                            </div>
+                            <div class="add-cart-btn">
+                                <button type="submit" class="btn btn-outlined--primary"><span class="plus-icon">+</span>Add to Cart</button>
+                            </div>
+                        </form>
+                                </div>                              
+                            </div>
+                        </div>
+                    </div>
+                </div>               
+            </div>
+
